<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/community_selector"
    tools:context="com.example.c4q.conscious.engage.view.ChallengeDetailActivity">

    <ImageView
        android:id="@+id/imv_colored_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/div_center"
        android:transitionName="@string/transition_drawable" />

    <TextView
        android:id="@+id/challenge_name"
        style="@style/Text.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/challenge_detail"
        android:background="@color/colorTransparentBlack"
        android:padding="16dp"
        android:transitionName="@string/transition_time_and_date"
        tools:text="MUSICAL/RHYTHMIC" />

    <View
        android:id="@+id/div_center"
        style="@style/Text.Primary"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerVertical="true"

        />

    <TextView
        android:id="@+id/challenge_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/div_center"
        android:padding="16dp"
        android:transitionName="@string/transition_message"/>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </FrameLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="46dp"
        android:layout_marginStart="11dp"
        android:text="start challenge" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_toEndOf="@+id/button3"
        android:text="accomplished challenge" />

</RelativeLayout>
